force-app/main/default/objects/Theme__c/Theme__c.object-meta.xml
<CustomObject>
    <description>To store dynamic colors for Eway, Ezidebit and Partners</description>
    <label>Theme</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Theme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Themes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>