force-app/main/default/objects/Theme__c/fields/Button1__c.field-meta.xml
<CustomField>
    <fullName>Button1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Button1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>