force-app/main/default/objects/Theme__c/fields/Button2__c.field-meta.xml
<CustomField>
    <fullName>Button2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Button2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>