force-app/main/default/objects/Theme__c/fields/Button__c.field-meta.xml
<CustomField>
    <fullName>Button__c</fullName>
    <description>It indicators the UI of the button in one journey process.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>It indicators the UI of the button in one journey process.</inlineHelpText>
    <label>Button</label>
    <length>255</length>
    <type>Text</type>
</CustomField>