force-app/main/default/objects/Theme__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>It indicators the company name of brand</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>It indicators the company name of brand</inlineHelpText>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>