force-app/main/default/objects/Theme__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>It indicators the style of description words in one journey process.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>It indicators the style of description words in one journey process.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>