force-app/main/default/objects/Theme__c/fields/Divider__c.field-meta.xml
<CustomField>
    <fullName>Divider__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Divider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>