force-app/main/default/objects/Theme__c/fields/File_Attachment_Card__c.field-meta.xml
<CustomField>
    <fullName>File_Attachment_Card__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>File Attachment Card</label>
    <length>255</length>
    <type>Text</type>
</CustomField>