force-app/main/default/objects/Theme__c/fields/Font__c.field-meta.xml
<CustomField>
    <fullName>Font__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Font</label>
    <length>255</length>
    <type>Text</type>
</CustomField>