force-app/main/default/objects/Theme__c/fields/Footer__c.field-meta.xml
<CustomField>
    <fullName>Footer__c</fullName>
    <description>It indicators the style of footer in one journey process.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>It indicators the style of footer in one journey process.</inlineHelpText>
    <label>Footer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>