force-app/main/default/objects/Theme__c/fields/Header__c.field-meta.xml
<CustomField>
    <fullName>Header__c</fullName>
    <description>It indicators the style of header in one journey process.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>It indicators the style of header in one journey process.</inlineHelpText>
    <label>Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>