force-app/main/default/objects/Theme__c/fields/Heading_1__c.field-meta.xml
<CustomField>
    <fullName>Heading_1__c</fullName>
    <description>It indicators the style of heading 1 in one journey process.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>It indicators the style of heading 1 in one journey process.</inlineHelpText>
    <label>Heading 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>