force-app/main/default/objects/Theme__c/fields/Horizontal_Line__c.field-meta.xml
<CustomField>
    <fullName>Horizontal_Line__c</fullName>
    <description>It indicators the style of horizontal line in one journey process.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>It indicators the style of horizontal line in one journey process.</inlineHelpText>
    <label>Horizontal Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>