force-app/main/default/objects/Theme__c/fields/Input__c.field-meta.xml
<CustomField>
    <fullName>Input__c</fullName>
    <description>It indicators the color of input textbox in one journey process.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>It indicators the color of input textbox in one journey process.</inlineHelpText>
    <label>Input</label>
    <length>255</length>
    <type>Text</type>
</CustomField>