force-app/main/default/objects/Theme__c/fields/Journey_Type__c.field-meta.xml
<CustomField>
    <fullName>Journey_Type__c</fullName>
    <label>Journey Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Details</fullName>
            </value>
            <value>
                <fullName>New Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>