force-app/main/default/objects/Theme__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <description>It indicators the color of link in one journey process.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>It indicators the color of link in one journey process.</inlineHelpText>
    <label>Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>