force-app/main/default/objects/Theme__c/fields/Phone_Icon__c.field-meta.xml
<CustomField>
    <fullName>Phone_Icon__c</fullName>
    <description>It indicators the style of phone icon in one journey process.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>It indicators the style of phone icon in one journey process.</inlineHelpText>
    <label>Phone Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>