force-app/main/default/objects/Theme__c/fields/Primary_Color__c.field-meta.xml
<CustomField>
    <fullName>Primary_Color__c</fullName>
    <description>It indicators the brand color</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>It indicators the brand color</inlineHelpText>
    <label>Primary Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>