force-app/main/default/objects/Theme__c/fields/Primary_Colour__c.field-meta.xml
<CustomField>
    <fullName>Primary_Colour__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Colour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>