force-app/main/default/objects/Theme__c/fields/Privacy_Policy_Link__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Policy_Link__c</fullName>
    <description>It indicators the privacy policy link.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>It indicators the privacy policy link.</inlineHelpText>
    <label>Privacy Policy Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>