force-app/main/default/objects/Theme__c/fields/Progress_Bar__c.field-meta.xml
<CustomField>
    <fullName>Progress_Bar__c</fullName>
    <description>It indicators the style of progressbar in one journey process.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>It indicators the style of progressbar in one journey process.</inlineHelpText>
    <label>Progress Bar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>