force-app/main/default/objects/Theme__c/fields/Svg_Fill__c.field-meta.xml
<CustomField>
    <fullName>Svg_Fill__c</fullName>
    <description>Svg Fill Colour</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Svg Fill</label>
    <length>100</length>
    <type>Text</type>
</CustomField>