force-app/main/default/objects/Theme__c/fields/Terms_Of_Use_Link__c.field-meta.xml
<CustomField>
    <fullName>Terms_Of_Use_Link__c</fullName>
    <description>It indicators the terms of use link.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>It indicators the terms of use link.</inlineHelpText>
    <label>Terms Of Use Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>