force-app/main/default/objects/Theme__c/fields/Tile__c.field-meta.xml
<CustomField>
    <fullName>Tile__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>