force-app/main/default/objects/Theme__c/fields/Tooltip__c.field-meta.xml
<CustomField>
    <fullName>Tooltip__c</fullName>
    <description>It indicators the UI of tooltip in one journey process.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>It indicators the UI of tooltip in one journey process.</inlineHelpText>
    <label>Tooltip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>